--- a/svg-test.html
+++ b/svg-test.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
   <head>
-    <title>Test</title>    
+    <title>SVG Test</title>    
 	<style type="text/css">
 		svg {
 		  border: solid 1px #aaa;
